--- a/client/views/partials/lrs/lrsList.html
+++ b/client/views/partials/lrs/lrsList.html
@@ -1,41 +1,40 @@
 <div class="main-right col-xs-12" ng-controller="LrsListController">
     <div class="col-xs-12 pall-zero mb-10">
-        <div class="col-sm-3 pall-zero"><h3>LR's</h3></div>
+        <div class="col-sm-3 pall-zero">
+            <h3>LR's</h3>
+        </div>
         <ul class="col-sm-9 pall-zero list-inline">
             <li class="col-sm-6">
                 <form>
                     <div class="input-group stylish-input-group">
-                        <input type="text" ng-model="query.party" class="form-control"
-                               placeholder="Search By Party Name">
+                        <input type="text" ng-model="query.party" class="form-control" placeholder="Search By Party Name">
                         <span class="input-group-addon">
-                        <button type="submit" ng-click="getCount();">
-                              <i class="fa fa-search sear" aria-hidden="true"></i>
-                        </button>
-                    </span>
+                            <button type="submit" ng-click="getCount();">
+                                <i class="fa fa-search sear" aria-hidden="true"></i>
+                            </button>
+                        </span>
                     </div>
                 </form>
             </li>
             <li class="col-sm-4 pos-relative">
                 <div class="select-box erp-box">
-                    <ui-select ng-model="query.partyName" theme="select2"
-                               title="Choose a person" append-to-body="true" ng-change="getCount()">
+                    <ui-select ng-model="query.partyName" theme="select2" title="Choose a person" append-to-body="true"
+                        ng-change="getCount()">
                         <ui-select-match placeholder="Select a Party" class="form-control ui-select-control">
                             {{$select.selected.name || name}}
                         </ui-select-match>
-                        <ui-select-choices
-                                repeat="parties in partiesList | propsFilter: {name: $select.search}">
+                        <ui-select-choices repeat="parties in partiesList | propsFilter: {name: $select.search}">
                             <div ng-bind-html="parties.name | highlight: $select.search"></div>
                         </ui-select-choices>
                     </ui-select>
                 </div>
             </li>
             <li class="col-sm-1">
-                <button type="button" ng-click="shareDetailsViaEmail()"
-                        class="btn mailImage"><img src="images/Reports_Mail.png">
+                <button type="button" ng-click="shareDetailsViaEmail()" class="btn mailImage"><img src="images/Reports_Mail.png">
                 </button>
             </li>
             <li class="col-sm-1">
-                <button type="button" ng-click="downloadDetails();" class="btn mailImage">
+                <button type="button" ng-click="downloadPartyDetails();" class="btn mailImage">
                     <img src="images/Reports_Download.png"></button>
             </li>
         </ul>
@@ -46,32 +45,31 @@
             <td data-title="'LR No'" sortable="'lrNo'" class="clickable-item">{{
                 lr.lrNo}}
             </td>
-           <!-- <td data-title="'Truck No'" sortable="'registrationNo'" class="clickable-item">{{
+            <!-- <td data-title="'Truck No'" sortable="'registrationNo'" class="clickable-item">{{
                 lr.registrationNo}}
             </td>-->
             <td data-title="'Consignor'" sortable="'consignorName'" class="clickable-item">{{lr.partyName }}
             </td>
-            <td data-title="'Consignee'" sortable="'consigneeBanksNameAndAddress'" class="clickable-item">{{lr.consigneeBanksNameAndAddress || '--'}}
+            <td data-title="'Consignee'" sortable="'consigneeBanksNameAndAddress'" class="clickable-item">{{lr.consigneeBanksNameAndAddress
+                || '--'}}
             </td>
-            <td data-title="'Delivery Office'" sortable="'addressOfDeliveryOffice'" class="clickable-item">{{lr.addressOfDeliveryOffice || '--'}}
+            <td data-title="'Delivery Office'" sortable="'addressOfDeliveryOffice'" class="clickable-item">{{lr.addressOfDeliveryOffice
+                || '--'}}
             </td>
 
 
             <td data-title="'Action'" class="col-sm-2">
-                <a href="#"  class="btn"
-                   ng-click="goToEditLrPage(lr._id)">
+                <a href="#" class="btn" ng-click="goToEditLrPage(lr._id)">
                     <span class="glyphicon glyphicon-pencil"></span></a>
-                <a href="#"  class="btn"
-                   ng-click="deleteLR(lr._id)">
+                <a href="#" class="btn" ng-click="deleteLR(lr._id)">
                     <span class="glyphicon glyphicon-remove"></span></a>
-                <a href="#"  class="btn"
-                   ng-click="generatePdf(lr._id)">
+                <a href="#" class="btn" ng-click="generatePdf(lr._id)">
                     <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
                 </a>
             </td>
         </tr>
         <tr ng-if="!lrsList || lrsList.length === 0">
-            <td colspan="8"> LR  Records not found.</td>
+            <td colspan="8"> LR Records not found.</td>
         </tr>
     </table>
     <div class="add-image pull-right">
