--- a/client/views/partials/party/party-list.html
+++ b/client/views/partials/party/party-list.html
@@ -1,37 +1,36 @@
 <div class="main-right col-xs-12" ng-controller="PartyListController">
     <div class="col-xs-12 pall-zero mb-10">
-        <div class="col-sm-3 pall-zero"><h3>Parties</h3></div>
+        <div class="col-sm-3 pall-zero">
+            <h3>Parties</h3>
+        </div>
         <ul class="col-sm-9 pall-zero list-inline">
             <li class="col-sm-6">
                 <form>
                     <div class="input-group stylish-input-group">
-                        <input type="text" ng-model="partyName.name" class="form-control"
-                               placeholder="Search By Party Name">
+                        <input type="text" ng-model="partyName.name" class="form-control" placeholder="Search By Party Name">
                         <span class="input-group-addon">
-                        <button type="submit" ng-click="getCount();">
-                              <i class="fa fa-search sear" aria-hidden="true"></i>
-                        </button>
-                    </span>
+                            <button type="submit" ng-click="getCount();">
+                                <i class="fa fa-search sear" aria-hidden="true"></i>
+                            </button>
+                        </span>
                     </div>
                 </form>
             </li>
             <li class="col-sm-4 pos-relative">
                 <div class="select-box erp-box">
-                    <ui-select ng-model="partyName.party" theme="select2"
-                               title="Choose a person" append-to-body="true" ng-change="getCount();">
+                    <ui-select ng-model="partyName.party" theme="select2" title="Choose a person" append-to-body="true"
+                        ng-change="getCount();">
                         <ui-select-match placeholder="Select a Party" class="form-control ui-select-control">
                             {{$select.selected.name || name}}
                         </ui-select-match>
-                        <ui-select-choices
-                                repeat="parties in partiesList | propsFilter: {name: $select.search}">
+                        <ui-select-choices repeat="parties in partiesList | propsFilter: {name: $select.search}">
                             <div ng-bind-html="parties.name | highlight: $select.search"></div>
                         </ui-select-choices>
                     </ui-select>
                 </div>
             </li>
             <li class="col-sm-1">
-                <button type="button" ng-click="shareDetailsViaEmail()"
-                        class="btn mailImage"><img src="images/Reports_Mail.png">
+                <button type="button" ng-click="shareDetailsViaEmail()" class="btn mailImage"><img src="images/Reports_Mail.png">
                 </button>
             </li>
             <li class="col-sm-1">
@@ -59,20 +58,18 @@
             <td data-title="'Party Type'" sortable="'partyType'" class="clickable-item">{{
                 parties.partyType}}
             </td>
-         <!--   <td data-title="'Triplanes'" sortable="'tripLanes'" class="clickable-item">{{
+            <!--   <td data-title="'Triplanes'" sortable="'tripLanes'" class="clickable-item">{{
                 parties.tripLanes.length }}
             </td>-->
 
-            <td data-title="'Created By'" sortable="'createdByName'"
-                class="clickable-item">{{ parties.attrs.createdByName }}
+            <td data-title="'Created By'" sortable="'createdByName'" class="clickable-item">{{
+                parties.attrs.createdByName }}
             </td>
 
             <td data-title="'Action'" class="col-sm-2">
-                <a href="#" ng-show="userType=='account' || userId==parties.createdBy" class="btn"
-                   ng-click="goToEditPartyPage(parties._id)">
+                <a href="#" ng-show="userType=='account' || userId==parties.createdBy" class="btn" ng-click="goToEditPartyPage(parties._id)">
                     <span class="glyphicon glyphicon-pencil"></span></a>
-                <a href="#" ng-show="userType=='account' || userId==parties.createdBy" class="btn"
-                   ng-click="deleteParty(parties._id)">
+                <a href="#" ng-show="userType=='account' || userId==parties.createdBy" class="btn" ng-click="deleteParty(parties._id)">
                     <span class="glyphicon glyphicon-remove"></span></a>
             </td>
         </tr>
@@ -83,8 +80,7 @@
 
     <div class="add-image pull-right">
         <figure>
-            <a href="#" ng-click="goToEditPartyPage()"><img src="images/Add_Parties.png" alt="Add Party"
-                                                            title="Add Party"></a>
+            <a href="#" ng-click="goToEditPartyPage()"><img src="images/Add_Parties.png" alt="Add Party" title="Add Party"></a>
         </figure>
     </div>
 
