--- a/client/views/partials/Invoice/add_editInvoice.html
+++ b/client/views/partials/Invoice/add_editInvoice.html
@@ -2,9 +2,9 @@
     <div class="col-xs-12 account-edit">
         <h2 class="title-name">{{pageTitle}}</h2>
         <form class="mt-10">
-            <div class="col-sm-12 col-xs-12 mt-10">
-                <div class="checkbox">
-                    <label>
+            <div class="col-sm-12 col-xs-12 mt-10" style="margin-bottom: 10px; margin-right: 15px" >
+                <div class="checkbox" >
+                    <label >
                         <input ng-model="invoice.addTrip" type="checkbox" ng-disabled="status" checked>
                         <span class="cr">
                             <i class="cr-icon fa fa-check"></i>
@@ -13,10 +13,10 @@
                     </label>
                 </div>
             </div>
-            <span ng-if="invoice.addTrip">
+            <span ng-if="invoice.addTrip" >
             <div class="col-sm-12 col-xs-12 mt-10">
-                    <div class="form-group col-sm-6 col-xs-12">
-                            <div class="styling-input-list">
+                    <div class="form-group col-sm-6 col-xs-12" >
+                            <div class="styling-input-list" >
                                 <ui-select ng-model="invoice.tripId" theme="select2"
                                            title="Choose a Truck" append-to-body="true">
                                     <ui-select-match class="form-control custom-form-control">
@@ -84,8 +84,7 @@
                 </span>
             <span data-ng-hide="invoice.addTrip">
                 <div ng-repeat="exp in invoice.trip track by $index">
-                    <div class="col-sm-12 col-xs-12 mt-10">
-                        <div class="form-group col-sm-2 col-xs-12">
+                     <div class="form-group col-sm-6 col-xs-12" style="margin-left: 20px">
                                 <div class="styling-input-list">
                                     <ui-select ng-model="exp.vehicleNo" theme="select2"
                                                title="Choose a Truck" append-to-body="true">
@@ -100,6 +99,8 @@
                                     <label class="focus-effect-for-input">Vehicle No</label>
                                 </div>
                             </div>
+                    <div class="col-sm-12 col-xs-12 mt-10">
+
                     <div class=" col-sm-2 form-group col-xs-12">
                         <div class="styling-input-list">
                             <input type="text" id="source{{$index}}" class="form-control custom-form-control"
@@ -107,7 +108,7 @@
                             <label class="focus-effect-for-input" aria-hidden="true">From</label>
                         </div>
                     </div>
-                    <div class=" col-sm-2 form-group col-xs-12">
+                    <div class=" col-sm-3 form-group col-xs-12">
                         <date-picker id="fromDate1" ng-model="exp.loadedOn"
                                      class="'custom-form-control'" placeholder="'Loaded On'"></date-picker>
                     </div>
@@ -118,25 +119,15 @@
                             <label class="focus-effect-for-input" aria-hidden="true">To</label>
                         </div>
                     </div>
-                    <div class=" col-sm-2 form-group col-xs-12">
+                    <div class=" col-sm-3 form-group col-xs-12">
                         <date-picker id="toDate1" ng-model="exp.unloadedOn"
                                      class="'custom-form-control'" placeholder="'UnLoaded On'"></date-picker>
                     </div>
-                    <div class="col-sm-1"> <a href="#" class="addingMaster" ng-click="addFromAndTo()"
+                    <div class="col-sm-2"> <a href="#" class="addingMaster" ng-click="addFromAndTo()"
                                               ng-show="$index==0">
                         <i class="fa fa-plus-square"></i>
                     </a></div>
-                        <!-- <div class=" col-sm-1 col-xs-12">
 
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox" ng-model="driver.isActive">
-                                        <span class="cr"><i class="cr-icon fa fa-check"></i></span>
-                                        AddTrip
-                                    </label>
-                                </div>
-
-                        </div> -->
                     <a href="#" class="addingMaster" ng-click="delete($index)"
                        ng-show="$index>0">
                         <i class="fa fa-minus-square"></i>
@@ -174,7 +165,7 @@
                         <div class="styling-input-list">
                             <input type="text" class="form-control custom-form-control"
                                    ng-model="invoice.consignorInvoiceNo"/>
-                            <label class="focus-effect-for-input" aria-hidden="true">Consignor Innvoice No</label>
+                            <label class="focus-effect-for-input" aria-hidden="true">Consignor Invoice No</label>
                         </div>
                     </div>
                 </div>
@@ -205,37 +196,52 @@
                     </div>
                 </div>
                  <div class="form-group col-xs-12">
-                    <!-- <div class="styling-input-list"> -->
+                    <div class="styling-input-list">
                         <div class="styling-input-list">
-                            <label  >Temparature Cargo</label>
-                            <input type="radio"  ng-model="invoice.temparatureCargo" ng-value="true">Yes
-                             <input type="radio"  ng-model="invoice.temparatureCargo" value="false">No
-
-
+                            <input type="text" class="form-control custom-form-control"
+                                   ng-model="invoice.ewaybill"/>
+                            <label class="focus-effect-for-input" aria-hidden="true">EwayBill</label>
                         </div>
-                    <!-- </div> -->
+                    </div>
                 </div>
+                <div class="form-group col-xs-12">
+                    <div class="styling-input-list">
+                        <div class="styling-input-list">
+                            <input type="text" class="form-control custom-form-control" ng-model="invoice.pallets"/>
+                            <label class="focus-effect-for-input" aria-hidden="true">No Of Pallets</label>
+                        </div>
+                    </div>
+                </div>
+                 <!--<div class="form-group col-xs-12">-->
+                        <!--<div class="styling-input-list">-->
+                            <!--<label  >Temparature Cargo</label>-->
+                            <!--<input type="radio"  ng-model="invoice.temparatureCargo" ng-value="true">Yes-->
+                             <!--<input type="radio"  ng-model="invoice.temparatureCargo" value="false">No-->
+
+
+                        <!--</div>-->
+                <!--</div>-->
 
             </div>
             <div class="col-sm-6 col-xs-12 mt-10">
-                <div class="form-group col-xs-12">
+                <!--<div class="form-group col-xs-12">-->
                     <div class=" col-sm-12 form-group col-xs-12">
                         <date-picker id="lrDate" ng-model="invoice.lrDate"
                                      class="'custom-form-control'" placeholder="'LR Date'"></date-picker>
                     </div>
-                </div>
-                 <div class="form-group col-xs-12">
+                <!--</div>-->
+                 <!--<div class="form-group col-xs-12">-->
                     <div class=" col-sm-12 form-group col-xs-12">
                         <date-picker id="consignorDate" ng-model="invoice.consignorInvoiceDate"
-                                     class="'custom-form-control'" placeholder="'Consignor Innvoice Date'"></date-picker>
+                                     class="'custom-form-control'" placeholder="'Consignor Invoice Date'"></date-picker>
                     </div>
-                </div>
-                 <div class="form-group col-xs-12">
+                <!--</div>-->
+                 <!--<div class="form-group col-xs-12">-->
                     <div class=" col-sm-12 form-group col-xs-12">                                                                                                                                                                                                                                                                                                       
                         <date-picker id="gatePassDate" ng-model="invoice.gatePassDate"
                                      class="'custom-form-control'" placeholder="'Gate Pass Date'"></date-picker>
                     </div>
-                </div>
+                <!--</div>-->
                 <div class="form-group col-xs-12">
                     <div class="styling-input-list">
                         <div class="styling-input-list">
@@ -252,8 +258,28 @@
                         </div>
                     </div>
                 </div>
+
+                 <div class="form-group col-xs-12">
+                    <div class="styling-input-list">
+                        <div class="styling-input-list">
+                            <input type="text" class="form-control custom-form-control" ng-model="invoice.amount"/>
+                            <label class="focus-effect-for-input" aria-hidden="true">Amount</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group col-xs-12">
+                        <div style="margin-top:25px">
+                             <div class="styling-input-list">
+                               <label  >Temparature Cargo</label>
+                                 <input type="radio"  ng-model="invoice.temparatureCargo" ng-value="true">Yes
+                                <input type="radio"  ng-model="invoice.temparatureCargo" value="false">No
+                            </div>
+                        </div>
+                </div>
             </div>
-                <label style="margin-left: 30px"><b>Detention Charges</b></label>
+                <div class="row">
+                    <div class="clearfix"></div>
+                 <label style="margin-left: 32px"><b>Detention Charges</b></label>
                 <div class="col-sm-12 col-xs-12 mt-10">
 
                  <div class="form-group  col-sm-6 col-xs-12">
@@ -263,14 +289,15 @@
                             <label class="focus-effect-for-input" aria-hidden="true">No Of Days</label>
                         </div>
                     </div>
-                </div>
-                 <div class="form-group col-sm-6 col-xs-12">
+                 </div>
+                    <div class="form-group col-sm-6 col-xs-12">
                     <div class="styling-input-list">
                         <div class="styling-input-list">
-                            <input type="text" class="form-control custom-form-control" ng-model="invoice.amount"/>
+                            <input type="text" class="form-control custom-form-control" ng-model="invoice.DCamount"/>
                             <label class="focus-effect-for-input" aria-hidden="true">Amount</label>
                         </div>
                     </div>
+                </div>
                 </div>
                 </div>
             </span>
