--- a/client/views/partials/driverSheet/driver-sheet.html
+++ b/client/views/partials/driverSheet/driver-sheet.html
@@ -64,7 +64,9 @@
             <div class="col-sm-1">
                 <button type="button" class="btn btn-default" ng-click="nextDay()"><i class="glyphicon glyphicon-chevron-right"></i></button>
             </div>
-
+            <div class="col-sm-1">
+                <button type="button" class="btn btn-default" ng-click="createDriverSheet(dt)"><span class="glyphicon glyphicon-refresh"></span></button>
+            </div>
             <div class="pull-right">
                 <button class="btn btn-primary" ng-click="saveAll()"> Save</button>
             </div>
