latest changes added and tested

--- a/client/views/partials/Invoice/add_editInvoice.html
+++ b/client/views/partials/Invoice/add_editInvoice.html
@@ -177,6 +177,22 @@
                         </div>
                     </div>
                 </div>
+                <div class="form-group col-xs-12">
+                    <div class="styling-input-list">
+                        <div class="styling-input-list">
+                            <input type="text" class="form-control custom-form-control" ng-model="invoice.noOfpallets"/>
+                            <label class="focus-effect-for-input" aria-hidden="true">No of Pallets</label>
+                        </div>
+                    </div>
+                </div><div class="form-group col-xs-12">
+                    <div class="styling-input-list">
+                        <div class="styling-input-list">
+                            <input type="text" class="form-control custom-form-control" ng-model="invoice.ewayBill"/>
+                            <label class="focus-effect-for-input" aria-hidden="true">Eway Bill</label>
+                        </div>
+                    </div>
+                </div>
+
 
                 <div class="form-group col-xs-12">
                     <div class="styling-input-list">
@@ -242,6 +258,14 @@
                                      class="'custom-form-control'" placeholder="'Gate Pass Date'"></date-picker>
                     </div>
                 <!--</div>-->
+                <div class="form-group col-xs-12">
+                    <div class="styling-input-list">
+                        <div class="styling-input-list">
+                            <input type="text" class="form-control custom-form-control" ng-model="invoice.despatchedThrough"/>
+                            <label class="focus-effect-for-input" aria-hidden="true">despatched Through</label>
+                        </div>
+                    </div>
+                </div>
                 <div class="form-group col-xs-12">
                     <div class="styling-input-list">
                         <div class="styling-input-list">
