Invoice working display

--- a/client/views/partials/Invoice/invoiceList.html
+++ b/client/views/partials/Invoice/invoiceList.html
@@ -90,7 +90,7 @@
     </div>
 
 
-    <div class="report_left_inner" style="margin: 10px 0px;">
+    <div class="report_left_inner" style="margin: 10px 0px; display:none;">
         <table class="table" style="border: 1px solid #000000; border-collapse: collapse;">
             <thead>
                 <tr class="print-style">
